objects/FieloEE__Component__c.object
<CustomObject>
    <description>The elements that make up the pages in the members’ portal. Examples of components are “Menu”, “Content”, “Content Feed”, “Banner”, etc.</description>
    <fields>
        <fullName>FieloCH__ChallengeType__c</fullName>
        <inlineHelpText>Active List: Displays the challenges that the member is participating.
History: Displays the challenges finished by the member with the results.
Subscribe List: Displays the challenges that the member has available to subscribe.</inlineHelpText>
        <label>Challenge Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active list</fullName>
                </value>
                <value>
                    <fullName>History</fullName>
                </value>
                <value>
                    <fullName>Subscribe list</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FieloCH__ChallengeViewDisplay__c</fullName>
        <label>Challenge View Display</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Details</fullName>
                </value>
                <value>
                    <fullName>Missions</fullName>
                </value>
                <value>
                    <fullName>Rewards</fullName>
                </value>
                <value>
                    <fullName>Leaderboard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FieloCH__Challenge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Challenge</label>
        <referenceTo>FieloCH__Challenge__c</referenceTo>
        <relationshipLabel>Components</relationshipLabel>
        <relationshipName>Components</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloEE__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Components</relationshipLabel>
        <relationshipName>Components</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloEE__BannerPlacement__c</fullName>
        <description>Field to filter banners when using a Banner widget.</description>
        <label>Banner placement</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Home Top</fullName>
                </value>
                <value>
                    <fullName>Home Side</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FieloEE__CCS__c</fullName>
        <description>CSS code to modify the look and formatting of this component.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter a CSS code that will modify this component.</inlineHelpText>
        <label>CSS</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FieloEE__CSSClasses__c</fullName>
        <description>Here the CSS classes for the corresponding component will be stored.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter the CSS classes for the corresponding component.</inlineHelpText>
        <label>CSS Classes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FieloEE__Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Category of the items you want to be shown by this component.</description>
        <inlineHelpText>Select the category that will be shown by this component.</inlineHelpText>
        <label>Category</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>FieloEE__Category__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Category Group, Category Item</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>FieloEE__Category__c</referenceTo>
        <relationshipLabel>Components</relationshipLabel>
        <relationshipName>Components</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloEE__ContentHTML__c</fullName>
        <description>An HTML code that will be rendered as content. This field overrules the Content field above.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter an HTML code that will be rendered as content. This field overrules the Content field above.</inlineHelpText>
        <label>HTML Code</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FieloEE__Content__c</fullName>
        <description>A content consisting of rich text and images that will be showed in the members&apos; portal.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter text and images.</inlineHelpText>
        <label>Content</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FieloEE__Delay__c</fullName>
        <description>The time in milliseconds that this image will be showed.</description>
        <inlineHelpText>Set the time, in milliseconds, for each image to be shown.</inlineHelpText>
        <label>Delay</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloEE__Desktop__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Checking this option will make the component show in a desktop computer.</description>
        <inlineHelpText>Check this option if you want this component to be shown in a desktop computer.</inlineHelpText>
        <label>Desktop</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloEE__Display__c</fullName>
        <description>Deleted</description>
        <label>Display</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>FieloEE__Layout__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>List</fullName>
                </value>
                <value>
                    <fullName>Grid</fullName>
                </value>
                <value>
                    <fullName>Internal Page</fullName>
                </value>
                <value>
                    <fullName>Modal</fullName>
                </value>
                <value>
                    <fullName>Accordion</fullName>
                </value>
                <value>
                    <fullName>Scrollbars</fullName>
                </value>
                <value>
                    <fullName>No Scrollbars</fullName>
                </value>
                <value>
                    <fullName>Top</fullName>
                </value>
                <value>
                    <fullName>Bottom</fullName>
                </value>
                <value>
                    <fullName>Left</fullName>
                </value>
                <value>
                    <fullName>Right</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FieloEE__FieldSet2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Field Set 2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FieloEE__FieldSet__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>FieldSet</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FieloEE__Filter2__c</fullName>
        <description>Deprecated Field</description>
        <label>zz_deprecated_Filter</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FieloExtraTag_allPrizes</fullName>
                </value>
                <value>
                    <fullName>FieloExtraTag_myPrizes</fullName>
                </value>
                <value>
                    <fullName>FieloExtraTag_wishList</fullName>
                </value>
                <value>
                    <fullName>FieloExtraTag_mostRecent</fullName>
                </value>
                <value>
                    <fullName>FieloExtraTag_mostVoted</fullName>
                </value>
                <value>
                    <fullName>FieloExtraTag_mostPolular</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FieloEE__FilterBySegment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The segment of members to which this item will be showed.</description>
        <inlineHelpText>Pick the segments you want to show this item to.</inlineHelpText>
        <label>Filter By Segment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloEE__FilterFormula__c</fullName>
        <formula>IF (      ( NOT( ISBLANK( FieloEE__Tag__c ) ) &amp;&amp;   ISPICKVAL(FieloEE__Filter2__c, &apos;&apos;)  ) ,             FieloEE__Tag__c,               IF( ( ISBLANK( FieloEE__Tag__c ) &amp;&amp;    NOT( ISPICKVAL(FieloEE__Filter2__c, &apos;&apos;)    )  ) ,                              TEXT(  FieloEE__Filter2__c ),                                     IF(                                         ( NOT( ISBLANK( FieloEE__Tag__c ) ) &amp;&amp;  NOT( ISPICKVAL(FieloEE__Filter2__c, &apos;&apos;)  )   )  ,                                          FieloEE__Tag__c,&apos;&apos;)       ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Filter Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__Filter__c</fullName>
        <description>This field will be populated by the trigger and it will contain the CSS classes depending on the visibility of the Component by device.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Display Device</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__Height__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Component Height</description>
        <label>Height</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloEE__Layout__c</fullName>
        <label>Layout</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>List</fullName>
                </value>
                <value>
                    <fullName>Grid</fullName>
                </value>
                <value>
                    <fullName>Slider</fullName>
                </value>
                <value>
                    <fullName>Tabs</fullName>
                </value>
                <value>
                    <fullName>Row</fullName>
                </value>
                <value>
                    <fullName>Column</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FieloEE__MenuRedirect__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Menu Redirect</label>
        <referenceTo>FieloEE__Menu__c</referenceTo>
        <relationshipLabel>Components (Menu Redirect)</relationshipLabel>
        <relationshipName>Components1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloEE__Menu__c</fullName>
        <label>Menu</label>
        <referenceTo>FieloEE__Menu__c</referenceTo>
        <relationshipLabel>Components</relationshipLabel>
        <relationshipName>Components</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>FieloEE__Mobile__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Checking this option will make the component show in a cell phone.</description>
        <inlineHelpText>Check this option for making this component visible in a mobile device.</inlineHelpText>
        <label>Mobile</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloEE__Modal__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Deprecated Field</description>
        <label>Use URL Filters</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloEE__NewsCategory__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Content feed category</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__NewsType__c</fullName>
        <label>Content feed type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>News</fullName>
                </value>
                <value>
                    <fullName>FAQ</fullName>
                </value>
                <value>
                    <fullName>Event</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FieloEE__OptionalName__c</fullName>
        <description>A title that will be showed on top of the component.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter a title to be showed on top of the component.</inlineHelpText>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__OrderBy__c</fullName>
        <description>The order in which rewards are showed in the catalog.</description>
        <inlineHelpText>Choose the order criteria for rewards.</inlineHelpText>
        <label>Order By</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Name - Points</fullName>
                </value>
                <value>
                    <fullName>Points - Name</fullName>
                </value>
                <value>
                    <fullName>Name</fullName>
                    <default>true</default>
                    <label>Name</label>
                </value>
                <value>
                    <fullName>Points</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FieloEE__Order__c</fullName>
        <description>The order in which the components are placed in the section.</description>
        <inlineHelpText>Select the order in which the components are placed in the section.</inlineHelpText>
        <label>Order</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloEE__PageName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Page Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__Paging__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Checking this option will show a paging section for the component. If left unchecked, all items will show in a single page.</description>
        <inlineHelpText>Check this option if you want a paging section.</inlineHelpText>
        <label>Paging</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloEE__Qant__c</fullName>
        <description>Number of items to be showed in a page.</description>
        <inlineHelpText>Set the number of items to show per page.</inlineHelpText>
        <label>Items per Page</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloEE__Qcolumns__c</fullName>
        <description>The number of columns in the grid view.</description>
        <inlineHelpText>Set the number of columns (for the grid view only).</inlineHelpText>
        <label>Number of Columns</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <default>true</default>
                    <label>1</label>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FieloEE__Qrows__c</fullName>
        <description>The number of rows in the grid view.</description>
        <inlineHelpText>Set the number of rows (for the Grid view only).</inlineHelpText>
        <label>Number of Rows</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloEE__Section__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Section to which the component belongs</description>
        <label>Section</label>
        <referenceTo>FieloEE__Section__c</referenceTo>
        <relationshipLabel>Components</relationshipLabel>
        <relationshipName>Components</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloEE__Tablet__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Checking this option will make the component show in a tablet computer.</description>
        <inlineHelpText>Check this option for making this component visible in a tablet computer.</inlineHelpText>
        <label>Tablet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloEE__Tag__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Tag of the items you want to be shown by this component.</description>
        <inlineHelpText>Select the tag that will be shown by this component.</inlineHelpText>
        <label>Tag</label>
        <referenceTo>FieloEE__Tag__c</referenceTo>
        <relationshipLabel>Components</relationshipLabel>
        <relationshipName>Components</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloEE__Text__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FieloEE__TransactionType__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Transaction Type</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__Type__c</fullName>
        <description>Deprecated Field</description>
        <label>zz_deprecated_Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Slider</fullName>
                </value>
                <value>
                    <fullName>Row</fullName>
                </value>
                <value>
                    <fullName>Column</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FieloEE__Width__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Component Width</description>
        <label>Width</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloSVY__Survey__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Survey</label>
        <referenceTo>FieloSVY__Survey__c</referenceTo>
        <relationshipLabel>Components</relationshipLabel>
        <relationshipName>Components</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Component</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Component Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Component</pluralLabel>
    <recordTypes>
        <fullName>FieloCH__ChallengeDetail</fullName>
        <active>true</active>
        <label>Challenge Detail</label>
    </recordTypes>
    <recordTypes>
        <fullName>FieloCH__ChallengeLeaderboard</fullName>
        <active>true</active>
        <label>Challenge Leaderboard</label>
    </recordTypes>
    <recordTypes>
        <fullName>FieloCH__ChallengeMissions</fullName>
        <active>true</active>
        <label>Challenge Missions</label>
    </recordTypes>
    <recordTypes>
        <fullName>FieloCH__ChallengeRewards</fullName>
        <active>true</active>
        <label>Challenge Rewards</label>
    </recordTypes>
    <recordTypes>
        <fullName>FieloCH__Challenges</fullName>
        <active>true</active>
        <label>Challenges</label>
    </recordTypes>
    <recordTypes>
        <fullName>FieloEE__Badges</fullName>
        <active>true</active>
        <label>Badges</label>
    </recordTypes>
    <recordTypes>
        <fullName>FieloEE__Banner</fullName>
        <active>true</active>
        <label>Banner</label>
    </recordTypes>
    <recordTypes>
        <fullName>FieloEE__BannerWidget</fullName>
        <active>true</active>
        <label>Banner Widget</label>
    </recordTypes>
    <recordTypes>
        <fullName>FieloEE__Branchs</fullName>
        <active>true</active>
        <label>Branches</label>
    </recordTypes>
    <recordTypes>
        <fullName>FieloEE__Breadcrumb</fullName>
        <active>false</active>
        <label>Breadcrumb</label>
    </recordTypes>
    <recordTypes>
        <fullName>FieloEE__Catalog</fullName>
        <active>true</active>
        <label>Catalog</label>
    </recordTypes>
    <recordTypes>
        <fullName>FieloEE__Categories</fullName>
        <active>true</active>
        <label>Categories</label>
    </recordTypes>
    <recordTypes>
        <fullName>FieloEE__Content</fullName>
        <active>true</active>
        <label>Content</label>
    </recordTypes>
    <recordTypes>
        <fullName>FieloEE__ContentWidget</fullName>
        <active>true</active>
        <label>Content Widget</label>
    </recordTypes>
    <recordTypes>
        <fullName>FieloEE__GetPoints</fullName>
        <active>true</active>
        <label>GetPoints</label>
    </recordTypes>
    <recordTypes>
        <fullName>FieloEE__IncludePage</fullName>
        <active>true</active>
        <label>Include Page</label>
    </recordTypes>
    <recordTypes>
        <fullName>FieloEE__Login</fullName>
        <active>true</active>
        <label>Login</label>
    </recordTypes>
    <recordTypes>
        <fullName>FieloEE__Menu</fullName>
        <active>true</active>
        <label>Menu</label>
    </recordTypes>
    <recordTypes>
        <fullName>FieloEE__News</fullName>
        <active>true</active>
        <label>Content Feed</label>
    </recordTypes>
    <recordTypes>
        <fullName>FieloEE__Profile</fullName>
        <active>true</active>
        <label>Profile</label>
    </recordTypes>
    <recordTypes>
        <fullName>FieloEE__Redemptions</fullName>
        <active>true</active>
        <label>Redemptions</label>
    </recordTypes>
    <recordTypes>
        <fullName>FieloEE__Register</fullName>
        <active>true</active>
        <label>Register</label>
    </recordTypes>
    <recordTypes>
        <fullName>FieloEE__Search</fullName>
        <active>false</active>
        <label>Search</label>
    </recordTypes>
    <recordTypes>
        <fullName>FieloEE__ShoppingCart</fullName>
        <active>false</active>
        <label>ShoppingCart</label>
    </recordTypes>
    <recordTypes>
        <fullName>FieloEE__Transactions</fullName>
        <active>true</active>
        <label>Transactions</label>
    </recordTypes>
    <recordTypes>
        <fullName>FieloSVY__Survey</fullName>
        <active>true</active>
        <label>Survey</label>
    </recordTypes>
    <recordTypes>
        <fullName>FieloSVY__SurveyCatalog</fullName>
        <active>true</active>
        <label>Survey Catalog</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>FieloCH__Challenge_Required</fullName>
        <active>true</active>
        <description>For Challenge components, except Subscribe, Actual or History, check if the lookup is filled.</description>
        <errorConditionFormula>AND(
    NOT(ISNEW()),
    ISBLANK( FieloCH__Challenge__c ),
    OR(RecordType.DeveloperName = &apos;ChallengeDetail&apos;, RecordType.DeveloperName = &apos;ChallengeRewards&apos;, RecordType.DeveloperName = &apos;ChallengeMissions&apos;, RecordType.DeveloperName = &apos;ChallengeLeaderboard&apos;) )</errorConditionFormula>
        <errorDisplayField>FieloCH__Challenge__c</errorDisplayField>
        <errorMessage>Must select a Challenge.</errorMessage>
    </validationRules>
</CustomObject>